--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "webpack --watch"
+    "build": "webpack",
+    "heroku-postbuild": "echo Skip build on Heroku"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +23,6 @@
   },
   "devDependencies": {
     "webpack": "^5.35.0"
-  }
+  },
+  "heroku-run-build-script": true
 }
